--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/terminus": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "dotenv": "^16.0.3",
     "pg": "^8.9.0",
